[gd_scene load_steps=49 format=2]

[ext_resource path="res://scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/playerSprites/MutatedTurtle.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/playerSprites/Wizard.png" type="Texture" id=3]
[ext_resource path="res://assets/animations/hurt.tres" type="Animation" id=4]
[ext_resource path="res://assets/shaders/hurt.tres" type="Shader" id=5]
[ext_resource path="res://assets/sfx/xp-ding.mp3" type="AudioStream" id=6]
[ext_resource path="res://assets/fonts/text_font.tres" type="DynamicFont" id=7]
[ext_resource path="res://ui/UpgradeOption.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/sprites/playerSprites/unknown.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/playerSprites/BulletRetriever.png" type="Texture" id=10]
[ext_resource path="res://assets/sfx/item_pickup.wav" type="AudioStream" id=11]
[ext_resource path="res://assets/sfx/item_found.wav" type="AudioStream" id=12]

[sub_resource type="ShaderMaterial" id=24]
resource_local_to_scene = true
shader = ExtResource( 5 )
shader_param/color = Color( 1, 1, 1, 1 )
shader_param/flashState = 0.0

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 240, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 480, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 960, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 240, 240, 240 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 240, 240, 240, 240 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 480, 240, 240, 240 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 720, 240, 240, 240 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 960, 240, 240, 240 )

[sub_resource type="AtlasTexture" id=59]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=60]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 240, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=61]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 480, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=62]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 960, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=63]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 240, 240, 240 )

[sub_resource type="AtlasTexture" id=64]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 240, 240, 240, 240 )

[sub_resource type="AtlasTexture" id=65]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 480, 240, 240, 240 )

[sub_resource type="AtlasTexture" id=66]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 720, 240, 240, 240 )

[sub_resource type="AtlasTexture" id=67]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 960, 240, 240, 240 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 240, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 480, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 960, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 240, 240, 240 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 240, 240, 240, 240 )

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 480, 240, 240, 240 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 720, 240, 240, 240 )

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 960, 240, 240, 240 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "???",
"speed": 0.0
}, {
"frames": [ SubResource( 40 ), SubResource( 41 ), SubResource( 42 ) ],
"loop": true,
"name": "retrieverIdle",
"speed": 5.0
}, {
"frames": [ SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ) ],
"loop": true,
"name": "retrieverRun",
"speed": 9.0
}, {
"frames": [ SubResource( 59 ), SubResource( 60 ), SubResource( 61 ) ],
"loop": true,
"name": "turtleIdle",
"speed": 4.0
}, {
"frames": [ SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ) ],
"loop": true,
"name": "turtleRun",
"speed": 5.0
}, {
"frames": [ SubResource( 49 ), SubResource( 50 ), SubResource( 51 ) ],
"loop": true,
"name": "wizardIdle",
"speed": 5.0
}, {
"frames": [ SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ) ],
"loop": true,
"name": "wizardRun",
"speed": 9.0
} ]

[sub_resource type="Animation" id=23]
length = 0.8

[sub_resource type="CapsuleShape2D" id=58]
radius = 14.7211
height = 26.0388

[sub_resource type="CircleShape2D" id=22]
radius = 37.1214

[sub_resource type="StyleBoxFlat" id=26]
bg_color = Color( 0.137255, 0.588235, 0.152941, 1 )

[sub_resource type="StyleBoxFlat" id=27]
bg_color = Color( 0.2, 0.2, 0.2, 1 )

[sub_resource type="StyleBoxFlat" id=28]
bg_color = Color( 0, 0.8, 0, 1 )

[sub_resource type="StyleBoxFlat" id=29]
bg_color = Color( 0.592157, 0, 0, 1 )

[node name="Player" type="KinematicBody2D" groups=["player"]]
scale = Vector2( 0.984983, 0.890554 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 24 )
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 1 )
animation = "turtleIdle"
frame = 1
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite"]
anims/RESET = SubResource( 23 )
anims/hurt = ExtResource( 4 )

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2( -0.507623, 2.80724 )
scale = Vector2( 1, 1 )
shape = SubResource( 58 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true

[node name="ImmunityTimer" type="Timer" parent="."]

[node name="Weapons" type="Node2D" parent="."]

[node name="GrabRange" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabRange"]
shape = SubResource( 22 )

[node name="ItemPickup" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -10.0

[node name="WeaponEquipped" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="GUI" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="GUI"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ProgressBar" type="ProgressBar" parent="GUI/Control"]
anchor_right = 1.0
margin_bottom = 14.0
rect_min_size = Vector2( 1024, 30 )
custom_styles/fg = SubResource( 26 )
custom_styles/bg = SubResource( 27 )
percent_visible = false

[node name="LevelLabel" type="Label" parent="GUI/Control/ProgressBar"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -74.0
margin_top = -6.0
margin_right = -28.0
margin_bottom = 8.0
custom_fonts/font = ExtResource( 7 )
text = "Level 0"

[node name="HealthBar" type="ProgressBar" parent="GUI/Control"]
margin_left = 10.0
margin_top = 60.0
margin_right = 14.0
margin_bottom = 74.0
rect_min_size = Vector2( 288, 24 )
custom_styles/fg = SubResource( 28 )
custom_styles/bg = SubResource( 29 )
value = 100.0
percent_visible = false

[node name="LevelUp" type="Panel" parent="GUI/Control"]
pause_mode = 2
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -225.0
margin_right = 200.0
margin_bottom = 225.0

[node name="LevelUpLabel" type="Label" parent="GUI/Control/LevelUp"]
anchor_right = 1.0
margin_bottom = 50.0
rect_min_size = Vector2( 300, 80 )
custom_fonts/font = ExtResource( 7 )
text = "Level Up!"
align = 1
valign = 1

[node name="UpgradeOptions" type="VBoxContainer" parent="GUI/Control/LevelUp"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -135.0
margin_right = 150.0
margin_bottom = 173.0
rect_min_size = Vector2( 250, 60 )

[node name="UpgradeOption" parent="GUI/Control/LevelUp/UpgradeOptions" instance=ExtResource( 8 )]
margin_top = 0.0
margin_right = 300.0

[node name="UpgradeOption2" parent="GUI/Control/LevelUp/UpgradeOptions" instance=ExtResource( 8 )]
margin_top = 104.0
margin_right = 300.0
margin_bottom = 204.0

[node name="UpgradeOption3" parent="GUI/Control/LevelUp/UpgradeOptions" instance=ExtResource( 8 )]
margin_top = 208.0
margin_right = 300.0
margin_bottom = 308.0

[node name="LevelUpSound" type="AudioStreamPlayer" parent="GUI/Control/LevelUp"]
stream = ExtResource( 12 )
volume_db = 5.0

[connection signal="timeout" from="ImmunityTimer" to="." method="_on_ImmunityTimer_timeout"]
[connection signal="area_entered" from="GrabRange" to="." method="_on_GrabRange_area_entered"]
[connection signal="pressed" from="GUI/Control/LevelUp/UpgradeOptions/UpgradeOption" to="." method="_on_UpgradeOption_pressed"]
[connection signal="pressed" from="GUI/Control/LevelUp/UpgradeOptions/UpgradeOption2" to="." method="_on_UpgradeOption2_pressed"]
[connection signal="pressed" from="GUI/Control/LevelUp/UpgradeOptions/UpgradeOption3" to="." method="_on_UpgradeOption3_pressed"]
